tests/expected_output/missing_parameter_type/000001-clang-16.0-x86_64-pc-linux-gnu.txt
missing_parameter_type.c:1:16: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
int add(int b, c) {
               ^
               int
dcc explanation: have you given a type for c?
You must specify the type of each function parameter.
